<resources>
    <string name="app_name">PRM392PE</string>
    
    <!-- Language options for spinner -->
    <string-array name="language_options">
        <item>English</item>
        <item>Vietnamese</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>Korean</item>
    </string-array>
    
    <!-- Menu items -->
    <string name="menu_home">Home</string>
    <string name="menu_products">Products</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_utils">Utils Demo</string>
    <string name="menu_services">Services Demo</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    
    <!-- Common strings -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>